# OpenQMC

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  conanfile.py  main.cpp  main.cu
data/: data.csv
docs/: Plots.nb  elastic-chain.svgz  openQMC-api.wsd  plan.svgz
include/: test.h
include/core/: eigen_types.h  types.cuh  types.h
include/la/: CuSparseSingleton.cuh  Dense.cuh  Dense.h  DenseImpl.cuh  Sparse.cuh  Sparse.h  SparseELL.cuh  SparseELL.h  SparseELLImpl.cuh  SparseImpl.cuh  SparseImplGPU.cuh  Super.cuh  Vect.cuh  Vect.h  VectImpl.cuh  VectImplGPU.cuh
include/models/: ElasticChain1D.cuh  XYZModel.cuh
include/ode/: Euler.cuh  Euler_GPU.cuh  GPU.cuh  Integrator.cuh  RK4.cuh  RK4_GPU.cuh
include/qm/: Open.cuh  Spins.cuh
include/utils/: CSV.cuh  SignPadding.cuh  pimpl_test.h
python/: fermiChain.py  fermion.py  fermionOperators.py  requirements.txt  spinOperators.py
qutip/: super.py
scripts/: RunElastic.sh
src/: CMakeLists.txt  elastic.cpp  elastic.cu  main.cpp  main.cu  test.cu
src/Boost_tests/: CMakeLists.txt
src/Boost_tests/la_tests/: CMakeLists.txt  SparseTest.cu
src/la/: CMakeLists.txt  Dense.cpp  Dense.cu  Dense.cuh  Dense.h  Sparse.cpp  Sparse.cu  Sparse.cuh  Sparse.h  SparseELL.cpp  SparseELL.cu  SparseELL.h  SparseELLImpl.cu  SparseImpl.cu  SparseImplGPU.cu  Super.cpp  Super.cu  Super.h  Vect.cpp  Vect.cu  Vect.cuh  Vect.h  VectImpl.cu  VectImplGPU.cu  dense.cpp  dense.h  sparse.cpp  sparse.h  vect.cpp  vect.h
src/models/: CMakeLists.txt  ElasticChain1D.cpp  ElasticChain1D.cu  ElasticChain1D.cuh  ElasticChain1D.h  XYZModel.cpp  XYZModel.cu  XYZModel.cuh  XYZModel.h
src/modules-test/: CMakeLists.txt  main.cc  math-complex.ixx  math.ixx  test.cu
src/ode/: CMakeLists.txt  Euler.cpp  Euler.cu  Euler.cuh  Euler.h  Euler_GPU.cu  Euler_GPU.cuh  GPU.cu  GPU.cuh  Integrator.cpp  Integrator.cu  Integrator.cuh  Integrator.h  RK4.cpp  RK4.cu  RK4.cuh  RK4.h  RK4_GPU.cu  RK4_GPU.cuh  integrator.cpp  integrator.h
src/qm/: CMakeLists.txt  Open.cu  Open.cuh  Spins.cpp  Spins.cu  Spins.h
src/utils/: CMakeLists.txt  CSV.cpp  CSV.cu  CSV.h  SignPadding.cpp  SignPadding.cu  SignPadding.h  utils.cu
test/: CMakeLists.txt
test/la/: Dense_tests.cc  SparseELL_tests.cc  SparseImplGPU_benchmarks.cu  SparseImplGPU_tests.cu  SparseImpl_benchmarks.cu  SparseImpl_tests.cu  Sparse_tests.cc  VectImplGPU_benchmarks.cu  VectImplGPU_tests.cu  VectImpl_benchmarks.cu  VectImpl_tests.cu  Vect_tests.cc
